# My_module_maker_for_pybind11

./: .gitignore  README.md  komandoer.md  komandoer.txt  main.py  package.cpp  test_project_pyd.py
project/: CMakeLists.txt  my_python_module.cp312-win_amd64.pyd  my_python_module.pyi  setup.py
project/include/: my_module.h
project/python/: CMakeLists.txt  bindings.cpp
project/src/: CMakeLists.txt  my_module.cpp
project/tests/: CMakelists.txt  cpp_tests.cpp  test_my_module.py
